[package]
name = "clam"
version = "0.1.6"
authors = ["uma <blog3170@gmail.com>"]

license = "MIT"
description = "Simple template engine"
repository = "https://github.com/uma0317/clam"
readme = "README.md"
keywords = ["clam", "template", "engine", "simple"]

[dependencies]
regex = "0.2"
iron = "0.6.0"
mime = "0.2.6"
